<resources>
    <string name="app_name">BrainRotGames</string>
    <string name="brainrotgames">BrainRotGames</string>
    <string name="brain_icon">Brain icon</string>
    <string name="LOGIN">LOGIN</string>
    <string name="Register">Register</string>
    <string name="settings">Settings</string>
    <string name="default_web_client_id">236017016549-0vu5rh3lo1unn1dpp2au7eebn1dumbhh.apps.googleusercontent.com</string>
    <string name="msg_token_fmt">FCM Registration Token: %1$s</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="account_details">Account Details</string>
    <string name="username">Username:</string>
    <string name="points_0">Points: 0</string>
    <string name="tier">Tier:</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_content" >Privacy Policy</string>
    <string name="enter_new_username">Enter new username</string>
    <string name="save_changes">Save Changes</string>
    <string name="avatar">Avatar</string>
    <string name="customize">Customize</string>
    <string name="enter_new_username1">Enter new username</string>
    <string name="save_changes1">Save Changes</string>
    <string name="back_to_game_portal" >Game Portal</string>
    <string name="game_hub_support">Game Hub Support</string>
    <string name="how_can_we_help_you_with_our_games">How can we help you with our games?</string>
    <string name="enter_your_question_here">Enter your question here</string>
    <string name="get_help">Get Help</string>
    <string name="move_up" >Move Up</string>
    <string name="move_down" >Move Down</string>
    <string name="move_left" >Move Left</string>
    <string name="move_right" >Move Right</string>

    <string-array name="tier_array">
        <item>Fresh Meat</item>
        <item>Infected</item>
        <item>Walker</item>
        <item>Rotter</item>
        <item>Revenant</item>
        <item>Nightstalker</item>
        <item>Necromancer</item>
        <item>Warlord</item>
        <item>Dreadlord</item>
    </string-array>

    <!-- API Key stored here (not recommended for production apps) -->
    <string name="generative_model_api_key">AIzaSyBBh_csSi8yQTFXX4AAVMTK7FbEZxqekzI</string>
    <string name="tiktaktoe">TikTakToe</string>
    <string name="tik_tak_toe_description">Tic-Tac-Toe is a classic two-player game played on a 3x3 grid. Players take turns marking a square on the grid with either an \'X\' or an \'O.\' The goal is to be the first to get three of your marks in a row, either horizontally, vertically, or diagonally. The game is simple, quick, and often ends in a draw if both players play optimally.</string>
    <string name="play">Play</string>
    <string name="tictactoe">TicTacToe</string>
    <string name="tiktaktoe_button_1">TikTakToe Button 1</string>
    <string name="tiktaktoe_button_2">TikTakToe Button 2</string>
    <string name="tiktaktoe_button_3">TikTakToe Button 3</string>
    <string name="tiktaktoe_button_4">TikTakToe Button 4</string>
    <string name="tiktaktoe_button_5">TikTakToe Button 5</string>
    <string name="tiktaktoe_button_6">TikTakToe Button 6</string>
    <string name="tiktaktoe_button_7">TikTakToe Button 7</string>
    <string name="tiktaktoe_button_8">TikTakToe Button 8</string>
    <string name="tiktaktoe_button_9">TikTakToe Button 9</string>
    <string name="reset">Reset</string>
    <string name="choose_avatar">Choose Avatar:</string>
    <string name="choose_avatar1">Choose Avatar</string>
    <string name="choose_avatar2">Choose Avatar:</string>
    <string name="join_the_brain_rot_game_culture_and_sign_up_today">Join the Brain Rot Game Culture and Sign up today</string>
    <string name="register_now">Register Now!</string>
    <string name="or_click_below_to_sign_in">Or Click Below to Sign in</string>
    <string name="sign_in_now">Sign in now!</string>
    <string name="brstart">brstart</string>
    <string name="brain_games">BRAIN + GAMES</string>
    <string name="register_username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_submit">SUBMIT</string>
    <string name="settings_account_details">Account Details</string>
    <string name="settings_privacy_policy">Privacy Policy</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_support_and_feedback">Support And Feedback</string>
    <string name="settings_go_to_community">Go to Community</string>
    <string name="select_language">Select Language</string>
    <string name="com_username">Username</string>
    <string name="enter_your_tip">Enter your tip</string>
    <string name="submit_tip">Submit Tip</string>
    <string name="tips_list">Tips list</string>
    <string name="floppy_bird">Floppy Bird</string>
    <string name="fly_through_the_pipes_and_avoid_obstacles_to_achieve_the_highest_score">Fly through the pipes and avoid obstacles to achieve the highest score!</string>
    <string name="game_image">Game Image</string>
    <string name="start">Start ▶</string>
    <string name="floppy_settings">Settings</string>
    <string name="how_to_play_floppy_bird">How to Play Floppy Bird</string>
    <string name="tap_the_screen_to_make_the_bird_fly_n_n_n_avoid_the_pipes_and_obstacles_as_you_fly_through_the_air_n_n_n_try_to_get_the_highest_score_by_passing_through_as_many_pipes_as_you_can_n_n_n_good_luck_and_have_fun">🐦 Tap the screen to make the bird fly!\n\n\n🐦 Avoid the pipes and obstacles as you fly through the air.\n\n\n🐦 Try to get the highest score by passing through as many pipes as you can!\n\n\n🐦 Good luck and have fun!</string>
    <string name="high_score">High Score</string>
    <string name="best_time">Best Time</string>
    <string name="clear_scores">Clear Scores</string>
    <string name="gamehub">GAMEHUB</string>
    <string name="leaderboard_image">Leaderboard Image</string>
    <string name="click_on_a_users_name_to_add_them_to_your_private_leaderboard">Click on a users name to add them to your Private Leaderboard</string>
    <string name="select_game">Select Game</string>
    <string name="floppy_username">Username</string>
    <string name="floppy_high_score">High Score</string>
    <string name="players_journal">Players Journal</string>
    <string name="private_leaderboard_image">Leaderboard Image</string>
    <string name="private_select_game">Select Game</string>
    <string name="private_username">Username</string>
    <string name="private_high_score">High Score</string>
    <string name="high_score_0">High Score: 0</string>
    <string name="score_0">Score: 0</string>
    <string name="new_game">New Game</string>
    <string name="player_x_s_turn">Player X\'s turn</string>
    <string name="profile">Profile</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="private_leaderboard">Private Leaderboard</string>
    <string name="menu_players_journal">Players Journal</string>
    <string name="sign_out">Sign Out</string>
</resources>
