<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".SnakeGameActivity">

    <com.example.practiceapplicationbrg.CanvasView
        android:id="@+id/canvas"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="76dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_down"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="104dp"
        android:contentDescription="@string/move_down"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.757"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/baseline_arrow_downward_24" />

    <ImageButton
        android:id="@+id/button_left"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="156dp"
        android:contentDescription="@string/move_left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_up"
        app:layout_constraintHorizontal_bias="0.931"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_24" />

    <ImageButton
        android:id="@+id/button_up"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="60dp"
        android:contentDescription="@string/move_up"
        app:layout_constraintBottom_toTopOf="@+id/button_down"
        app:layout_constraintEnd_toStartOf="@+id/button_right"
        app:srcCompat="@drawable/baseline_arrow_upward_24" />

    <ImageButton
        android:id="@+id/button_right"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="156dp"
        android:contentDescription="@string/move_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/baseline_arrow_forward_24" />

</androidx.constraintlayout.widget.ConstraintLayout>